# pytest-path

./: .coveragerc  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
src/coffee/: __main__.py  main.py
src/coffee/americano/: americano.py
src/coffee/latte/: latte.py
tests/: test_main.py
tests/americano/: test_americano.py
tests/latte/: test_latte.py
